# smart-blackbox

./: README.md
smart-surveillance-camera/: .cproject  .gitignore  .project  CMakeLists.txt  LICENSE  NOTICE  README.md  install-and-start.sh  iot-vision-camera.manifest  tizen-manifest.xml  tizen-manifest.xml.in  update-dashboard.sh
smart-surveillance-camera/dashboard/: .cproject  .project  project_def.prop  server.js  tizen-manifest.xml
smart-surveillance-camera/dashboard/inc/: dashboard.h
smart-surveillance-camera/dashboard/public/: index.html
smart-surveillance-camera/dashboard/public/css/: style.css
smart-surveillance-camera/dashboard/public/js/: app.js
smart-surveillance-camera/dashboard/res/: server.js
smart-surveillance-camera/dashboard/src/: dashboard.c
smart-surveillance-camera/inc/: controller.h  log.h  resource_servo_motor_sg90.h  smartthings.h  smartthings_notification.h  st_thing_master.h  st_thing_resource.h  switch.h
smart-surveillance-camera/include/: controller_image.h  controller_mv.h  exif.h  motion.h  resource_camera.h  servo-h.h  servo-type.h  servo-v.h  smartthings_payload.h  smartthings_resource.h
smart-surveillance-camera/packaging/: iot-dashboard.service  iot-vision-camera.spec
smart-surveillance-camera/shared/res/: master.json  resource.json
smart-surveillance-camera/smartthings-plugin/: device-profile.json  prod-catalog.json
smart-surveillance-camera/smartthings-plugin/manifest/: ui.json
smart-surveillance-camera/smartthings-plugin/plugin/: index.html  manifest.xml
smart-surveillance-camera/smartthings-plugin/plugin/css/: helper.css
smart-surveillance-camera/smartthings-plugin/plugin/js/: capability_modeSwitch.js  capability_motionSensor.js  capability_servoMotor.js  index.js
smart-surveillance-camera/src/: controller.c  controller_image.c  controller_mv.c  exif.c  motion.c  resource_camera.c  resource_servo_motor_sg90.c  servo-h.c  servo-v.c  st_thing_master.c  st_thing_resource.c  switch.c
st-things-blind/: project_def.prop  tizen-manifest.xml
st-things-co2-meter/: .cproject  .gitignore  .project  project_def.prop  (+1 more)
(+64 files in other folders)
