CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(CMAKE_VERBOSE_MAKEFILE 0)

PROJECT(${P_NAME} C)
SET(INSTALL_EXEC_PREFIX "${INSTALL_PREFIX}/bin")
SET(PROJECT_ROOT_DIR "${CMAKE_SOURCE_DIR}")
SET(PROJECT_RESOURCES_DIR "${PROJECT_ROOT_DIR}/res")
SET(CMAKE_INSTALL_RPATH "${INSTALL_PREFIX}/lib")

INCLUDE(FindPkgConfig)
pkg_check_modules(APP_PKGS REQUIRED
	dlog
	capi-appfw-service-application
	capi-system-peripheral-io
	capi-media-camera
	capi-media-vision
	capi-media-image-util
	libtzplatform-config
	glib-2.0
	gio-2.0
	ecore
	rpc-port
	libexif
	capi-appfw-package-manager
)

FOREACH (flag ${APP_PKGS_CFLAGS})
	SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} ${flag}")
ENDFOREACH(flag)


SET(EXTRA_CFLAGS "${EXTRA_CFLAGS} -fvisibility=hidden -Wall -Winline -g -fno-builtin-malloc -fPIE")
SET(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${EXTRA_CFLAGS}")
SET(CMAKE_EXE_LINKER_FLAGS "-Wl,--as-needed -pie")

LINK_DIRECTORIES(${PROJECT_ROOT_DIR}/lib)
SET(ST_API_LIBS st_thing_master_api st_thing_resource_api)

INCLUDE_DIRECTORIES(${PROJECT_ROOT_DIR}/include)

FILE(GLOB APP_SOURCE ${CMAKE_CURRENT_SOURCE_DIR}/src/*.c)

ADD_EXECUTABLE(${PROJECT_NAME} ${APP_SOURCE})
TARGET_LINK_LIBRARIES(${PROJECT_NAME} ${APP_PKGS_LDFLAGS} -lm ${ST_API_LIBS})

CONFIGURE_FILE(${PROJECT_ROOT_DIR}/tizen-manifest.xml.in ${PROJECT_NAME}.xml @ONLY)

# Install
INSTALL(TARGETS ${PROJECT_NAME} DESTINATION ${INSTALL_EXEC_PREFIX})
INSTALL(FILES ${PROJECT_NAME}.xml DESTINATION ${SYS_PACKAGES_DIR})
INSTALL(DIRECTORY ${PROJECT_ROOT_DIR}/lib DESTINATION ${INSTALL_PREFIX})
INSTALL(FILES ${PROJECT_ROOT_DIR}/shared/res/default_icon.png DESTINATION ${APP_SHARED_RES_DIR} RENAME ${PROJECT_NAME}.png)
INSTALL(DIRECTORY ${PROJECT_ROOT_DIR}/res DESTINATION ${INSTALL_PREFIX})
INSTALL(FILES ${PROJECT_ROOT_DIR}/shared/res/master.json DESTINATION ${APP_SHARED_RES_DIR})
INSTALL(FILES ${PROJECT_ROOT_DIR}/shared/res/resource.json DESTINATION ${APP_SHARED_RES_DIR})
INSTALL(DIRECTORY ${PROJECT_ROOT_DIR}/dashboard DESTINATION ${DASH_BOARD_DIR})
